# tensorflow-stnn-lib

./: README.md  doc.txt  pyproject.toml
.github/workflows/: python-publish.yml
examples/: mnist_digits_siamese_net.ipynb
keras_snn_lib/: __init__.py  distance.py  generator.py  snn.py
sphinx-docs/: conf.py  index.rst  tensorflow_stnn_lib.rst
sphinx-docs/_build/doctrees/: environment.pickle  index.doctree  tensorflow_stnn_lib.doctree
sphinx-docs/_build/markdown/: index.md  tensorflow_stnn_lib.md
tensorflow_stnn_lib/: __init__.py  data.py  generator.py  loss.py  metrics.py  net.py
