
[project]
name = "keras_snn_lib"
version = "0.0.1"
authors = [
    { name="Filipe C. Ferraz", email="filipe.ferraz0@gmail.com" },
]
description = "A Keras-based Python library built to facilitate the implementation of Siamese Neural Networks (SNN)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1",
    "pandas >= 2",
    "tqdm >= 4",
    "tensorflow >= 2",
    "matplotlib >= 3",
    "h5py => 3"
]