
[project]
name = "keras_snn_lib"
version = "0.0.1"
authors = [
    { name="Filipe C. Ferraz", email="filipe.ferraz0@gmail.com" },
]
description = "A Keras-based Python library built to facilitate the implementation of Siamese Neural Networks (SNN)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.0.0",
    "pandas >= 2.0.0",
    "tqdm >= 4.0.0",
    "tensorflow >= 2.0.0",
    "matplotlib >= 3.0.0",
    "h5py >= 3.0.0"
]