
[project]
name = "tensorflow_stnn_lib"
version = "0.0.1"
authors = [
    { name="Filipe Chagas Ferraz", email="filipe.ferraz0@gmail.com" },
]
description = "A Tensorflow-based Python library built to facilitate the implementation of Siamese and Triplet Neural Networks"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy >= 1.0.0",
    "pandas >= 2.0.0",
    "tqdm >= 4.0.0",
    "tensorflow >= 2.0.0",
    "matplotlib >= 3.0.0",
    "h5py >= 3.0.0"
]